repository/ingress-nginx/dummy-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummy-backend
  namespace: ingress-nginx
spec:
  selector:
    app: dummy-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dummy-backend
  namespace: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dummy-backend
  template:
    metadata:
      labels:
        app: dummy-backend
    spec:
      containers:
        - name: dummy-backend
          image: hashicorp/http-echo
          args:
            - "-text=OK"
          ports:
            - containerPort: 8080
